--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,16 @@
   width: 100%;
 }
 
+button {
+  background-color: rgba(255, 255, 255, 0.2);
+  border: 2px solid black;
+  border-radius: 10px;
+  word-wrap: break-word;
+}
+
+button:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  transition-duration: 0.2s;
+}
